Fix button tooltips in TwentyTwenty, reset `word-wrap` and `word-break` to `normal`.

--- a/assets/css/minimal-share-buttons.css
+++ b/assets/css/minimal-share-buttons.css
@@ -74,6 +74,8 @@ a.minimal-share-button:focus {
   padding: .5em;
   background-color: black;
   color: #fff;
+  word-wrap: normal;
+  word-break: normal;
 }
 
 :root button.msb-native-share {
